# vulkan_compute

./: .gitignore  CMakeLists.txt  README.md
cmake/: external_shaderc.cmake
shaders/: dense_train_forward.glsl  shader.glsl  shader2.glsl  utils.glsl
src/: application.cpp  application.hpp  exception.hpp  gpu.hpp  main.cpp  types.hpp  vulkan.cpp
